[project]
name = "congressapi-client"
version = "0.1.0"
description = "Typed Congress.gov API wrapper"
authors = [{ name="Sean Peters"}]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = ["requests>=2.31"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
