[project]
name = "congressapi-client"
version = "0.1.0"
description = "Typed Congress.gov API wrapper"
authors = [{ name="Sean Peters"}]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "notebook>=7.4.5",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests-mock>=1.12.1",
    "requests>=2.31",
    "tqdm>=4.67.1",
    "xmltodict>=0.14.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["congressapi_client"]
